# openwar

./: .gitignore  CMakeLists.txt  OpenWar-Prefix.pch  main.cpp
Build-CMake/: CMakeLists.txt
Build-Xcode/: OpenWar-Info.plist  OpenWar-Prefix.pch  main.cpp
Build-Xcode/OpenWar.xcodeproj/: project.pbxproj
OpenWar.xcodeproj/: project.pbxproj
Platform/: OpenWarSurface.cpp  OpenWarSurface.h
Platform/Audio/: MusicDirector.cpp  MusicDirector.h  SoundLoader.h  SoundPlayer.cpp  SoundPlayer.h
Platform/BattleMap/: BattleMap.cpp  BattleMap.h  GroundMap.h  HeightMap.cpp  MapEditor.cpp  SmoothGroundMap.cpp  SmoothGroundMap.h  TiledGroundMap.cpp  TiledGroundMap.h
Platform/BattleModel/: BattleCommander.cpp  BattleCommander.h  BattleInspector.cpp  BattleInspector.h  BattleObjects.cpp  BattleObjects.h  BattleObjects_v1.cpp  BattleObjects_v1.h  BattleObserver.cpp  BattleObserver.h  BattleScenario.cpp  BattleScenario.h  BattleScript.cpp  BattleScript.h  BattleSimulator.cpp  BattleSimulator.h  BattleSimulator_v1_0_0.cpp  BattleSimulator_v1_0_0.h  GroundMap.h  HeightMap.cpp  HeightMap.h  MonkeyScript.cpp  MonkeyScript.h  MovementRules.cpp  MovementRules.h  PracticeScript.cpp  PracticeScript.h  SamuraiModule.cpp  SamuraiModule.h  SmoothGroundMap.cpp  SmoothGroundMap.h  TiledGroundMap.cpp  TiledGroundMap.h
Platform/BattleScript/: MonkeyScript.cpp  MonkeyScript.h  PracticeScript.cpp  PracticeScript.h
Platform/BattleView/: BattleGesture.cpp  BattleGesture.h  BattleHotspot.cpp  BattleHotspot.h  BattleLayer.cpp  BattleLayer.h  BattleView.cpp  BattleView.h  CasualtyMarker.cpp  CasualtyMarker.h  RangeMarker.cpp  RangeMarker.h  ShootingCounter.cpp  ShootingCounter.h  SmokeCounter.cpp  SmokeCounter.h  UnitCounter.cpp  UnitCounter.h  UnitMarker.cpp  UnitMarker.h  UnitMovementMarker.cpp  UnitMovementMarker.h  UnitTrackingMarker.cpp  UnitTrackingMarker.h
Platform/SmoothTerrain/: SmoothTerrainRenderer.cpp  SmoothTerrainRenderer.h  SmoothTerrainShaders.cpp  SmoothTerrainShaders.h  SmoothTerrainSky.cpp  SmoothTerrainSky.h  SmoothTerrainWater.cpp  SmoothTerrainWater.h
Platform/TerrainView/: EditorGesture.cpp  EditorGesture.h  EditorHotspot.cpp  EditorHotspot.h  EditorModel.cpp  EditorModel.h  TerrainGesture.cpp  TerrainGesture.h  TerrainHotspot.cpp  TerrainHotspot.h  TerrainView.cpp  TerrainView.h  TerrainViewport.cpp  TerrainViewport.h
Platform/TiledTerrain/: TiledTerrainRenderer.cpp  TiledTerrainRenderer.h
Resources/Maps/: DefaultMap.lua  DefaultMap.tiff  Practice.tiff
Resources/Scripts/: openwar.lua
Sources/: main.cpp
Sources-Cpp/: OpenWarPlatform.h  OpenWarSurface.h
Sources-Cpp/Algebra/: bounds.h  geometry.cpp
Sources-Cpp/Algorithms/: GaussBlur.cpp  GaussBlur.h  bspline.cpp  bspline_patch.h  quadtree.h  vec2_sampler.cpp  vec2_sampler.h
Sources-Cpp/Audio/: SoundLoader.h  SoundPlayer.cpp  SoundPlayer.h
Sources-Cpp/BattleMap/: BattleMap.cpp  BattleMap.h  GroundMap.cpp  HeightMap.cpp  MapEditor.h  SmoothGroundMap.cpp  SmoothGroundMap.h  TiledGroundMap.cpp  TiledGroundMap.h
Sources-Cpp/BattleModel/: BattleObjects.h  BattleObjects_v1.cpp  BattleScenario.cpp  BattleScenario.h  BattleSimulator.cpp  BattleSimulator_v1_0_0.cpp  BattleSimulator_v1_0_0.h
Sources-Cpp/BattleScript/: BattleScript.h  MonkeyScript.h  PracticeScript.cpp  PracticeScript.h
Sources-Cpp/BattleView/: BattleGesture.cpp  BattleGesture.h  BattleHotspot.h  BattleLayer.cpp  BattleView.cpp  BattleView.h  ShootingCounter.cpp  SmokeCounter.cpp  UnitCounter.h  UnitMarker.h  UnitMovementMarker.cpp  UnitMovementMarker.h  UnitTrackingMarker.cpp
Sources-Cpp/Graphics/: CommonShaders.cpp  CommonShaders.h  FontAdapter.cpp  FontAdapter.h  FontDescriptor.cpp  GraphicsContext.cpp  GraphicsContext.h  Image.cpp  Image.h  RenderBuffer.cpp  RenderBuffer.h  RenderCall.cpp  Sampler.h  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  TextureAtlas.cpp  TextureAtlas.h  TextureFont.cpp  TextureResource.cpp  TextureResource.h  Vertex.h  VertexBuffer.h  Viewport.h  savepng.c  savepng.h
Sources-Cpp/Shapes/: BillboardColorShader.cpp  BillboardColorShader.h  BillboardTextureShader.cpp  BillboardTextureShader.h  BillboardTextureShape.cpp  PathRenderer.cpp  PathRenderer.h  VertexShape.cpp  VertexShape.h
Sources-Cpp/SmoothTerrain/: SmoothTerrainRenderer.cpp  SmoothTerrainShaders.cpp  SmoothTerrainSky.cpp  SmoothTerrainSky.h  SmoothTerrainWater.cpp  SmoothTerrainWater.h
Sources-Cpp/Storage/: Preferences.cpp  Preferences.h  Resource.cpp  Resource.h
Sources-Cpp/Surface/: Animation.h  ClickGesture.cpp  ClickGesture.h  ClickHotspot.h  Hotspot.cpp  Hotspot.h  ScrollbarGesture.cpp  ScrollbarHotspot.cpp  ScrollerGesture.cpp  ScrollerGesture.h  ScrollerHotspot.cpp  ScrollerView.h  Surface.cpp  Surface.h  SurfaceAdapter_Mac.h  SurfaceAdapter_Mac.mm  SurfaceAdapter_SDL.h  SurfaceAdapter_Web.cpp  SurfaceAdapter_iOS.mm  View.cpp  View.h
Sources-Cpp/TerrainView/: EditorHotspot.cpp  EditorModel.cpp  EditorModel.h  TerrainGesture.cpp  TerrainGesture.h  TerrainHotspot.cpp  TerrainHotspot.h  TerrainView.cpp
Sources-Cpp/TiledTerrain/: TiledTerrainRenderer.cpp
Sources-Cpp/Widgets/: ButtonGrid.h  ButtonWidget.h  InputEditor.cpp  InputEditor.h  InputWidget.cpp  InputWidget.h  StringWidget.cpp  StringWidget.h  Widget.h  WidgetShader.h  WidgetView.cpp  WidgetView.h
Sources/BattleModel/: BattleCommander.cpp  BattleCommander.h  BattleModel.cpp  BattleModel.h  BattleScenario.cpp  BattleScenario.h  BattleScript.cpp  BattleScript.h  BattleSimulator.cpp  BattleSimulator.h  GroundMap.cpp  GroundMap.h  HeightMap.cpp  HeightMap.h  MovementRules.cpp  PracticeScript.cpp  PracticeScript.h  SamuraiModule.cpp  SamuraiModule.h  SmoothGroundMap.cpp  SmoothGroundMap.h  TiledGroundMap.cpp  TiledGroundMap.h
Sources/Sources/: BattleScript.cpp  BattleScript.h  BattleSurface.cpp  BattleSurface.h  OpenWarSurface.cpp  OpenWarSurface.h
Sources/Sources/BattleModel/: BattleModel.cpp  BattleModel.h  UnitCounter.cpp
Sources/Sources/BattleView/: BattleGesture.cpp  BattleGesture.h  BattleLayer.cpp  BattleLayer.h  BattleView.cpp  BattleView.h  CasualtyMarker.cpp  CasualtyMarker.h  (+14 more)
(+33 files in other folders)
